--- a/package.json
+++ b/package.json
@@ -1,5 +1,42 @@
 {
-  "name": "my-v0-project",
+  "name": "BleYA - Next.js Starter",
+  "description": "A modern Next.js starter template with a focus on performance, developer experience, and best practices.",
+  "keywords": [
+    "nextjs",
+    "starter",
+    "template",
+    "react",
+    "typescript",
+    "tailwindcss",
+    "radix-ui",
+    "gsap",
+    "threejs",
+    "ai-sdk",
+    "embla-carousel",
+    "recharts",
+    "sonner",
+    "cmdk",
+    "input-otp",
+    "vaul",
+    "ogl",
+    "lucide-react",
+    "react-day-picker",
+    "react-hook-form",
+    "react-resizable-panels",
+    "tailwind-merge",
+    "tailwindcss-animate",
+    "clsx",
+    "autoprefixer",
+    "postcss",
+    "zod",
+    "date-fns"
+  ],
+  "author": "BleYA",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RazielLimaa/BleYA.IA/"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +47,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "latest",
+    "@ai-sdk/openai": "^1.3.22",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -52,6 +90,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "ogl": "latest",
+    "openai": "^5.0.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
